--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ElektraPagos">
         <activity
-            android:name=".ektplogin.view.LoginActivity"
+            android:name=".ektplogin.view.EKTPLoginActivity"
             android:exported="false" />
         <activity
             android:name=".ektpsplashactivity.view.SplashActivity"
