--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.elektra.ektp" >
 
     <application
-        android:name=".ektpsharedpreferences.EKPTUserApplication"
+        android:name=".ektpsharedpreferences.EKTPUserApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
