--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.elektra.ektp" >
+    package="com.elektra.ektp">
 
     <application
         android:name=".ektpsharedpreferences.EKTPUserApplication"
@@ -9,7 +9,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ElektraPagos" >
+        android:theme="@style/Theme.ElektraPagos">
+        <activity
+            android:name=".ektpreceivemoney.view.EKTPReceiveMoneyActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.HighLight"/>
         <activity
             android:name=".ektpforgottenpass.view.EKTPForgottenPassActivity"
             android:exported="false"
@@ -23,17 +28,23 @@
         <activity
             android:name=".ektphome.view.EKTPHomeSettingsHelpActivity"
             android:exported="false"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.HighLight"/>
         <activity
             android:name=".ektphome.view.EKTPHomeActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.HighLight"/>
         <activity
             android:name=".ektplogin.view.EKTPLoginActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.HighLight"/>
         <activity
             android:name=".ektpsplashactivity.view.SplashActivity"
             android:exported="true"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.HighLight">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
