--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".ektpsharedpreferences.EKTPUserApplication"
@@ -16,6 +16,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ElektraPagos">
+        <activity
+            android:name=".ektphome.view.EKTPHomeContractsActivity"
+            android:exported="false" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.elektra.ektp"
@@ -25,10 +29,11 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
         </provider>
+
         <activity
             android:name=".ektpmovements.view.EKTPMovementsDetailsActivity"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ektpmovements.view.EKTPMovementsActivity"
             android:exported="false"
@@ -37,8 +42,7 @@
             android:name=".ektpreceivemoney.view.EKTPReceiveMoneyActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.HighLight"/>
-
+            android:theme="@style/Theme.HighLight" />
         <activity
             android:name=".ektpforgottenpass.view.EKTPForgottenPassActivity"
             android:exported="false"
@@ -53,16 +57,16 @@
             android:name=".ektphome.view.EKTPHomeSettingsHelpActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.HighLight"/>
+            android:theme="@style/Theme.HighLight" />
         <activity
             android:name=".ektphome.view.EKTPHomeActivity"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ektplogin.view.EKTPLoginActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.HighLight"/>
+            android:theme="@style/Theme.HighLight" />
         <activity
             android:name=".ektpsplashactivity.view.SplashActivity"
             android:exported="true"
