--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.biometric:biometric:1.0.0-rc01'
     implementation 'com.mindorks.android:prdownloader:0.6.0'//pdf
+    implementation 'com.github.barteksc:android-pdf-viewer:3.1.0-beta.1'
 }
