--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 apply plugin: 'kotlin-android'
 
@@ -58,4 +59,6 @@ dependencies {
     implementation 'androidx.biometric:biometric:1.0.0-rc01'
     implementation 'com.mindorks.android:prdownloader:0.6.0'//pdf
     implementation 'com.github.barteksc:android-pdf-viewer:3.1.0-beta.1'
+    implementation "androidx.room:room-ktx:2.4.0"
+    kapt "androidx.room:room-compiler:2.4.0"
 }
