--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,6 @@ dependencies {
     implementation 'com.squareup.moshi:moshi-kotlin:1.9.3'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation "io.coil-kt:coil:1.1.1"
+    implementation 'com.google.android.gms:play-services-auth:20.1.0'
+    implementation 'com.google.android.gms:play-services-auth-api-phone:18.0.1'
 }
