--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,6 @@ dependencies {
     implementation "io.coil-kt:coil:1.1.1"
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
     implementation 'com.google.android.gms:play-services-auth-api-phone:18.0.1'
+    implementation 'org.apache.commons:commons-lang3:3.11'
+    implementation 'org.greenrobot:eventbus:3.2.0'
 }
