--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation "androidx.biometric:biometric:1.1.0"
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
     testImplementation 'junit:junit:4.+'
+    testImplementation "io.mockk:mockk:1.12.2"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "androidx.core:core-ktx:1.7.0"
@@ -73,4 +74,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth-api-phone:18.0.1'
     implementation 'org.apache.commons:commons-lang3:3.11'
     implementation 'org.greenrobot:eventbus:3.2.0'
+
 }
